# tessa

./: CMakeLists.txt  LICENSE  README.md
data/: simple.wkt  syntax_error.wkt  test.wkt
src/: logging.cpp  logging.h  main.cpp  parse_wkt.h  tessa_triangulation.h
